REGRESSION(263338@main) [Win] JSTests/stress/settimeout-starvation.js is timing out https://bugs.webkit.org/show_bug.cgi?id=255908

Reviewed by Ross Kirsling.

stress/settimeout-starvation.js was timing out after 263338@main. It
changed RunLoop::stop to post WM_CLOSE to close a window.
settimeout-starvation.js does setTimeout in the timeout callback
infinitely. The WM_CLOSE message in the message queue never be
dispatched.

Reverted 263338@main. Use DestroyWindow in ~RunLoop to close the
window.

* Source/WTF/wtf/win/RunLoopWin.cpp:
(WTF::RunLoop::stop):
(WTF::RunLoop::~RunLoop):

Canonical link: https://commits.webkit.org/263401@main