Source/WTF/wtf/win/RunLoopWin.cpp
@@ -81,7 +81,11 @@ void RunLoop::setWakeUpCallback(WTF::Function<void()>&& function)
 
 void RunLoop::stop()
 {
-    ::PostMessage(m_runLoopMessageWindow, WM_CLOSE, 0, 0);
+    // RunLoop::stop() can be called from threads unrelated to this RunLoop.
+    // We should post a message that call PostQuitMessage in RunLoop's thread.
+    dispatch([] {
+        ::PostQuitMessage(0);
+    });
 }
 
 void RunLoop::registerRunLoopMessageWindowClass()
@@ -103,6 +107,7 @@ RunLoop::RunLoop()
 
 RunLoop::~RunLoop()
 {
+    ::DestroyWindow(m_runLoopMessageWindow);
 }
 
 void RunLoop::wakeUp()
